--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@iconify/react": "^6.0.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "tailwindcss": "^4.1.11"
   },
